Various homepage fixes for readability and mobile responsiveness

--- a/src/sass/components/_icon.scss
+++ b/src/sass/components/_icon.scss
@@ -11,9 +11,9 @@
 		border-bottom: none;
 		position: relative;
 
-		> .label {
+		/* > .label {
 			display: none;
-		}
+		}*/
 	}
 
 	@mixin color-icon($p: null) {
