--- a/src/sass/layout/_footer.scss
+++ b/src/sass/layout/_footer.scss
@@ -8,7 +8,7 @@
 
 	#footer {
 		@include color-typography(accent3);
-		@include padding(4.5em, 0);
+		@include padding(2.5em, 0);
 		color: _palette(accent3, fg-light);
 		text-align: center;
 
